# kassensystem

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/core/: settings.py
backend/django-server/: .dockerignore  .gitignore  schema.yml
backend/django-server/account/: admin.py  models.py  tests.py
backend/django-server/account/management/commands/: initadmin.py  initgroups.py
backend/django-server/account/migrations/: 0001_postgres_extensions.py  0002_initial.py  0003_alter_account_email.py
backend/django-server/authentication/: permissions.py  signals.py  tests.py  urls.py
backend/django-server/authentication/management/commands/: initadmin.py  initgroups.py
backend/django-server/core/: api.py  custom_azure.py  settings.py  urls.py  wsgi.py
backend/django-server/domain/employee/: admin.py  api.py  apps.py  commands.py  dtos.py  models.py  queries.py  serializers.py  tests.py  urls.py  views.py
backend/django-server/domain/pos/: admin.py  api.py  apps.py  commands.py  dtos.py  models.py  queries.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/django-server/domain/product_catalogue/: api.py  apps.py  commands.py  dtos.py  models.py  queries.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/django-server/menuitem/: models.py  serializers.py  urls.py  views.py
backend/django-server/menuitem/migrations/: 0001_initial.py
backend/django-server/persistence/: models.py
backend/docker_scripts/: entrypoint.sh  start.sh
(+44 files in other folders)
